Los diagramas que faltaban, y ya puestos en el informe

--- a/Tp1/Informe.tex
+++ b/Tp1/Informe.tex
@@ -192,4 +192,37 @@ Se opto para esto, utilizar un semaforo compartido entre ambos. El semaforo se i
 
 \subsection{Comunicación Entregas-Supervisora}
 
+\newpage
+
+\section{Diagrama de procesos}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=250pt]{./informe/Modelo-de-procesos.png}
+\caption{Diagrama de procesos}
+\end{center}
+\end{figure}
+
+\newpage
+
+\section{Diagrama de clases}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=250pt]{./informe/diagrama-clases.png}
+\caption{Diagrama de clases}
+\end{center}
+\end{figure}
+
+\newpage
+
+\section{Diagrama de transición de estados}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=250pt]{./informe/diagrama-estados-pizza.png}
+\caption{Diagrama de transición de estados}
+\end{center}
+\end{figure}
+
 \end{document}
