Revisión final del informe.

--- a/Tp1/Informe.tex
+++ b/Tp1/Informe.tex
@@ -138,7 +138,7 @@ deben coordinarse para no usar la registradora más de una al mismo tiempo.
 \subsection{Comunicación Programa Principal-Recepción}
 
 Los pedidos se ingresan por entrada estandar, por lo que estos dos procesos deben comunicarse de 
-forma que todo lo ingresado en el programa principal sea edirigido a la Recepción. 
+forma que todo lo ingresado en el programa principal sea redirigido a la Recepción. 
 
 \subsection{Comunicación Recepción-Cocina}
 
@@ -236,7 +236,7 @@ hornos, respectivamente. El de libres se utiliza para saber cuando una cocinera 
 un horno para poner el pedido preparado, y el de ocupados es usado por las cadetas para saber 
 cuando no hay más pedidos que retirar. Al colocar una cocinera un pedido en el horno, se decrementa 
 el semáforo de libres y se incrementa el de usados. Las operaciones inversas se realizan cuando una 
-cadeta retira una pizza ya cocida de un horno.\\
+cadeta retira una pizza ya cocida de un horno.
 
 \subsection{Caja Registradora}
 
