--- a/Tp2/Informe/Informe.tex
+++ b/Tp2/Informe/Informe.tex
@@ -74,9 +74,9 @@ Observaciones: \\
 
 \section{Análisis del problema}
 
-Se pide realizar un gestor de base de datos, utilizando un modelo cliente-servidor.//
-El servidor será el motor de la base de datos. Atenderá pedidos de altas, modificaciones y consultas por parte de los clientes, y mantendrá y persistirá la información. El mismo es secuencial, por lo que atenderá de a un pedido por vez.//
-El cliente facilitará la manipulación de la base de datos. A través de una interfaz, el usuario podrá pedir altas y modificaciones de regristros al servidor, y realizar consultas. Puede haber más de un cliente ejecutándose al mismo tiempo.//
+Se pide realizar un gestor de base de datos, utilizando un modelo cliente-servidor.\\
+El servidor será el motor de la base de datos. Atenderá pedidos de altas, modificaciones y consultas por parte de los clientes, y mantendrá y persistirá la información. El mismo es secuencial, por lo que atenderá de a un pedido por vez.\\
+El cliente facilitará la manipulación de la base de datos. A través de una interfaz, el usuario podrá pedir altas y modificaciones de regristros al servidor, y realizar consultas. Puede haber más de un cliente ejecutándose al mismo tiempo.\\
 Los registros deben almacenar nombre, dirección y teléfono, utilizando el primero como clave para la base.
 
 \section{División del proyecto en procesos}
